--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-calculator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://praveenkumar002.github.io/calculator",
+  "homepage": "http://praveenkumar002.github.io/react-calculator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
